samples/_failures_safe/1761417475_1c20b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e001ef7e.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e001ef7e.c:187:20: error: missing terminating " character
  187 |             printf("Vertex %d: unre
      |                    ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e001ef7e.c:187:13: error: expected expression at end of input
  187 |             printf("Vertex %d: unre
      |             ^~~~~~
./samples/SAFE/__tmp_e001ef7e.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e001ef7e.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e001ef7e.c:187:13: error: expected declaration or statement at end of input
